new batch edit script

--- a/config.yml
+++ b/config.yml
@@ -1,6 +1,7 @@
 ---
 url: "http://localhost:8089"
 repo: "repositories/2"
+error_file: "/home/kevin/work/errors.txt"
 marc_path: "/home/kevin/work/marc"
 eac_path: "/home/kevin/work/eac"
 json_path: "/home/kevin/work/json"
