temporary commit so I can figure out some things

--- a/config.yml
+++ b/config.yml
@@ -4,4 +4,5 @@ repo: "repositories/2"
 error_file: "/home/kevin/work/errors.txt"
 marc_path: "/home/kevin/work/marc"
 eac_path: "/home/kevin/work/eac"
+ead_path: "/home/kevin/work/ead"
 json_path: "/home/kevin/work/json"
