--- a/config.yml
+++ b/config.yml
@@ -2,7 +2,4 @@
 url: "http://localhost:8089"
 repo: "repositories/2"
 error_file: "/home/kevin/work/errors.txt"
-marc_path: "/home/kevin/work/marc"
-eac_path: "/home/kevin/work/eac"
-ead_path: "/home/kevin/work/ead"
-json_path: "/home/kevin/work/json"
+file_path: "/home/kevin/work"
